# KunPeng

./: .gitignore  Backend.cpp  Backend.h  CMakeLists.txt  DeviceControl.cpp  DeviceControl.h  Home.cpp  Home.h  TtsTest.cpp  TtsTest.h  VoiceGenerator.cpp  VoiceGenerator.h  VoiceRecognition.cpp  VoiceRecognition.h  VoiceTest.cpp  VoiceTest.h  VoiceprintRequest.cpp  VoiceprintRequest.h  VoiceprintRequest_README.md  main.cpp
material/: visitor.txt
